--- a/Musicstore/Musicstore/Musicstore.csproj
+++ b/Musicstore/Musicstore/Musicstore.csproj
@@ -183,6 +183,19 @@
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201509261458484_AddedAccountNameToUserTable.cs" />
+    <Compile Include="Migrations\201509261458484_AddedAccountNameToUserTable.Designer.cs">
+      <DependentUpon>201509261458484_AddedAccountNameToUserTable.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201509261550137_RemovedAccountNameFromUserTable.cs" />
+    <Compile Include="Migrations\201509261550137_RemovedAccountNameFromUserTable.Designer.cs">
+      <DependentUpon>201509261550137_RemovedAccountNameFromUserTable.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201509261558528_RenamedTables.cs" />
+    <Compile Include="Migrations\201509261558528_RenamedTables.Designer.cs">
+      <DependentUpon>201509261558528_RenamedTables.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\IdentityModels.cs" />
     <Compile Include="Models\ManageViewModels.cs" />
@@ -255,6 +268,17 @@
     <Content Include="packages.config" />
     <None Include="Project_Readme.html" />
     <Content Include="Scripts\jquery-1.10.2.min.map" />
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="Migrations\201509261458484_AddedAccountNameToUserTable.resx">
+      <DependentUpon>201509261458484_AddedAccountNameToUserTable.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201509261550137_RemovedAccountNameFromUserTable.resx">
+      <DependentUpon>201509261550137_RemovedAccountNameFromUserTable.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201509261558528_RenamedTables.resx">
+      <DependentUpon>201509261558528_RenamedTables.cs</DependentUpon>
+    </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
