--- a/Musicstore/Musicstore.Tests/packages.config
+++ b/Musicstore/Musicstore.Tests/packages.config
@@ -5,4 +5,6 @@
   <package id="Microsoft.AspNet.WebPages" version="3.2.3" targetFramework="net46" />
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net46" />
   <package id="Newtonsoft.Json" version="6.0.4" targetFramework="net46" />
+  <package id="Sendgrid" version="6.1.0" targetFramework="net46" />
+  <package id="SendGrid.SmtpApi" version="1.3.1" targetFramework="net46" />
 </packages>
