--- a/Musicstore/Musicstore.Tests/packages.config
+++ b/Musicstore/Musicstore.Tests/packages.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="Captcha" version="3.0.18.0" targetFramework="net46" />
   <package id="jQuery" version="2.1.4" targetFramework="net46" />
   <package id="jquery.datatables" version="1.10.10" targetFramework="net46" />
   <package id="Microsoft.AspNet.Mvc" version="5.2.3" targetFramework="net46" />
