Added unobtrusive ajax and ajax toolkit

--- a/Musicstore/Musicstore/Web.config
+++ b/Musicstore/Musicstore/Web.config
@@ -29,7 +29,7 @@
     <pages enableSessionState="true">
       <controls>
         <add assembly="BotDetect" namespace="BotDetect.Web.UI" tagPrefix="BotDetect" />
-      </controls>
+      <add tagPrefix="ajaxToolkit" assembly="AjaxControlToolkit" namespace="AjaxControlToolkit" /></controls>
     </pages>
   </system.web>
   <system.webServer>
