--- a/Musicstore/Musicstore/packages.config
+++ b/Musicstore/Musicstore/packages.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="AjaxControlToolkit" version="15.1.4.0" targetFramework="net46" />
   <package id="Antlr" version="3.5.0.2" targetFramework="net46" />
   <package id="bootstrap" version="3.3.6" targetFramework="net46" />
   <package id="Captcha" version="3.0.18.0" targetFramework="net46" />
@@ -20,6 +21,7 @@
   <package id="Microsoft.AspNet.WebApi.WebHost" version="5.2.3" targetFramework="net46" />
   <package id="Microsoft.AspNet.WebPages" version="3.2.3" targetFramework="net46" />
   <package id="Microsoft.CodeDom.Providers.DotNetCompilerPlatform" version="1.0.1" targetFramework="net46" />
+  <package id="Microsoft.jQuery.Unobtrusive.Ajax" version="3.2.3" targetFramework="net46" />
   <package id="Microsoft.jQuery.Unobtrusive.Validation" version="3.2.3" targetFramework="net46" />
   <package id="Microsoft.Net.Compilers" version="1.1.1" targetFramework="net46" developmentDependency="true" />
   <package id="Microsoft.Owin" version="3.0.1" targetFramework="net46" />
